--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     width: 50%;
 }
 
-.weatherContainer p
+.weatherContainer p,h3
 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -25,4 +25,10 @@
     font-size: 120px;
     margin-bottom: 5px;
     font-weight: bold;
+}
+
+a
+{
+    text-decoration: none;
+    color: inherit;
 }
